fix: set body visibility to visible by default and remove noscript style

--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@ p {
 }
 body {
   font-size: 1rem;
+  visibility: visible;
   -webkit-user-select: none;
   user-select: none;
   -webkit-touch-callout: none;
